Fix(CI): Test current setup on windows only

--- a/.github/workflows/cjson.yml
+++ b/.github/workflows/cjson.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       matrix:
         build_type: [Release, RelWithDebInfo, MinSizeRel, Debug]
-        target_system: [ ubuntu-22.04, windows-2022 ]
+        target_system: [ windows-2022 ]
     runs-on: ${{ matrix.target_system }}
     env:
       build_extension: ${{ matrix.target_system == 'windows-2022' && '.dll' || '.so' }}
@@ -35,7 +35,8 @@ jobs:
 
       - name: Configure
         shell: bash
-        run: LUA_DIR=LuaJIT/ cmake .
+        run: |
+          LUA_DIR=LuaJIT/ cmake .
 
       - name: Build
         run: |
