Fix(CI): Remove duplicate slashes and correct build_extension usage

--- a/.github/workflows/cjson.yml
+++ b/.github/workflows/cjson.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ${{ matrix.target_system }}
     env:
       build_extension: ${{ matrix.target_system == 'windows-2022' && '.dll' || '.so' }}
-      BUILD_DIR: $(pwd)/
+      BUILD_DIR: $(pwd)
 
     steps:
       - uses: actions/checkout@v4
@@ -43,7 +43,7 @@ jobs:
         run: |
           cmake --build . --config ${{ matrix.build_type }}
           echo ${{ env.BUILD_DIR }}
-          mv ${{ env.BUILD_DIR }}/${{ matrix.build_type }}/cjson${{ matrix.build_extension }} ${{ env.BUILD_DIR}}/cjson-${{ matrix.build_type }}${{ env.build_extension }}
+          mv ${{ env.BUILD_DIR }}/${{ matrix.build_type }}/cjson${{ env.build_extension }} ${{ env.BUILD_DIR}}/cjson-${{ matrix.build_type }}${{ env.build_extension }}
 
       - name: Upload Release
         if: github.event_name != 'pull_request'
