--- a/.github/workflows/cjson.yml
+++ b/.github/workflows/cjson.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ${{ matrix.target_system }}
     env:
       build_extension: ${{ matrix.target_system == 'windows-2022' && '.dll' || '.so' }}
-      BUILD_DIR: $(pwd | tr \ /)
+      # BUILD_DIR: $(pwd | tr \ /)
 
     steps:
       - uses: actions/checkout@v4
@@ -42,15 +42,15 @@ jobs:
         if: runner.os == 'Windows'
         run: |
           cmake --build . --config ${{ matrix.build_type }}
-          echo ${{ env.BUILD_DIR }}
-          mv ${{ env.BUILD_DIR }}/${{ matrix.build_type }}/cjson${{ env.build_extension }} ${{ env.BUILD_DIR}}/cjson-${{ matrix.build_type }}${{ env.build_extension }}
+          echo ${{ github.workspace }}
+          mv ${{ github.workspace }}/${{ matrix.build_type }}/cjson${{ env.build_extension }} ${{ github.workspace}}/cjson-${{ matrix.build_type }}${{ env.build_extension }}
 
       - name: Upload Release
         if: github.event_name != 'pull_request'
         uses: softprops/action-gh-release@v1
         with:
           tag_name: Stable-CI
-          files: ${{ env.BUILD_DIR }}/cjson-${{ matrix.build_type }}${{ env.build_extension }}
+          files: ${{ github.workspace }}/cjson-${{ matrix.build_type }}${{ env.build_extension }}
           body: |
             CI Build for Dreamweave IO2 fork
 
@@ -58,5 +58,5 @@ jobs:
         if: github.event_name == 'pull_request'
         uses: actions/upload-artifact@v3
         with:
-          path: ${{ env.BUILD_DIR }}/cjson-${{ matrix.build_type }}${{ env.build_extension }}
+          path: ${{ github.workspace }}/cjson-${{ matrix.build_type }}${{ env.build_extension }}
           name: cjson-${{ matrix.build_type }}-${{matrix.target_system}}
