--- a/.github/workflows/cjson.yml
+++ b/.github/workflows/cjson.yml
@@ -40,7 +40,7 @@ jobs:
         run: |
           cmake --build . --config ${{ matrix.build_type }}
 
-        -name: Move Release Files
+      # - name: Move Release Files
 
       - name: Upload Release
         if: github.event_name != 'pull_request'
