--- a/.github/workflows/cjson.yml
+++ b/.github/workflows/cjson.yml
@@ -40,16 +40,16 @@ jobs:
         run: |
           cmake --build . --config ${{ matrix.build_type }}
 
-      # - name: Move Release Files
-
-      - name: Upload Release
-        if: github.event_name != 'pull_request'
+      - name: Move Release Files
         if: runner.os == "Windows"
         run: |
           mv ${{ github.workspace }}/${{ matrix.build_type }}/cjson.dll ${{ github.workspace }}/cjson-${{ matrix.build_type }}.dll
         if: runner.os != "Windows"
         run: |
           mv ${{ github.workspace }}/cjson.so ${{ github.workspace }}/cjson-${{ matrix.build_type }}.so
+
+      - name: Upload Release
+        if: github.event_name != 'pull_request'
         uses: softprops/action-gh-release@v1
         with:
           tag_name: Stable-CI
@@ -63,6 +63,6 @@ jobs:
         with:
           name: cjson-${{ matrix.build_type }}-${{matrix.target_system}}
           if: runner.os == "Windows"
-          path: ${{ github.workspace }}/${{ matrix.build_type }}/cjson.dll
+          path: ${{ github.workspace }}/${{ matrix.build_type }}/cjson-${{ matrix.build_type }}.dll
           if: runner.os != "Windows"
-          path: ${{ github.workspace }}/cjson.so
+          path: ${{ github.workspace }}/cjson-${{ matrix.build_type }}.so
