Fix(CI): Fix script name

--- a/.github/workflows/cjson.yml
+++ b/.github/workflows/cjson.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Get Deps (LuaJIT)
         shell: bash
         # if: steps.cache-Lua.outputs.cache-hit != 'true'
-        run: CI/get_deps.${{runner.os}}.sh openmw-deps
+        run: CI/get_luajit.${{runner.os}}.sh openmw-deps
 
       - name: Configure
         shell: bash
