--- a/.github/workflows/cjson.yml
+++ b/.github/workflows/cjson.yml
@@ -14,7 +14,7 @@ jobs:
       matrix:
         build_type: [Release, RelWithDebInfo, MinSizeRel, Debug]
         target_system: [ ubuntu-22.04, windows-2022, macos-11 ]
-    runs-on:  ${{ matrix.target_system == 'windows-2022' && 'self-hosted, windows, X64' || matrix.target_system }}
+    runs-on:  ${{ matrix.target_system == 'windows-2022' && 'self-hosted, Windows, X64' || matrix.target_system }}
     env:
       BUILD_EXT: ${{ matrix.target_system == 'windows-2022' && '.dll' || '.so' }}
       BUILD_DIR: ${{ matrix.target_system == 'windows-2022' && 'D:/a/lua-cjson/lua-cjson' || '/home/runner/work/lua-cjson/lua-cjson' }}
