--- a/.github/workflows/cjson.yml
+++ b/.github/workflows/cjson.yml
@@ -29,6 +29,8 @@ jobs:
           update: true
           install: git mingw-w64-ucrt-x86_64-gcc
 
+      - run: Get-PSDrive
+      
       - name: Prime ccache
         uses: hendrikmuhs/ccache-action@v1.2
         with:
