--- a/.github/workflows/cjson.yml
+++ b/.github/workflows/cjson.yml
@@ -30,7 +30,8 @@ jobs:
           install: git mingw-w64-ucrt-x86_64-gcc
 
       - run: Get-PSDrive
-      
+        if: runner.os == 'Windows'
+
       - name: Prime ccache
         uses: hendrikmuhs/ccache-action@v1.2
         with:
